# infinityVM-foundry-template

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  foundry.toml
.github/: contracts.yml  rust.yml
.github/workflows/: contracts.yml  rust.yml
contracts/: foundry.toml
contracts/script/: CoprocessorDeployer.s.sol  Deployer.s.sol
contracts/script/utils/: EmptyContract.sol  Utils.sol
contracts/src/: Consumer.sol  ExampleConsumer.sol  IJobManager.sol  ImageID.sol  JobManager.sol  ProgramID.sol  SquareRootConsumer.sol  Utils.sol
contracts/src/coprocessor/: Consumer.sol  IJobManager.sol  JobManager.sol  OffchainRequester.sol  SingleOffchainSigner.sol  Utils.sol
contracts/test/: Coprocessor.t.sol  ExampleConsumer.t.sol  SquareRootConsumer.t.sol
contracts/test/mocks/: MockConsumer.sol
core/: Cargo.toml
core/src/: api.rs  lib.rs  orderbook.rs
node/: Cargo.toml
node/src/: engine.rs  lib.rs  main.rs
node/src/db/: mod.rs  models.rs  tables.rs
programs/: Cargo.toml  build.rs
programs-sp1/: Cargo.toml
programs-sp1/elf/: program-elf
programs-sp1/program/: Cargo.toml
programs-sp1/program/src/: main.rs
programs-sp1/src/: lib.rs
programs/app/: Cargo.toml
programs/app/src/: clob.rs  square_root.rs
programs/guest/: Cargo.toml
programs/guest/src/: address-balance.rs  main.rs  square-root.rs
programs/square-root/: Cargo.toml
programs/square-root/src/: main.rs
programs/src/: lib.rs
utils/: Cargo.toml
utils/src/: sol.rs
zkvm-utils/: Cargo.toml
zkvm-utils/src/: lib.rs  main.rs  sol.rs
