[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.79"

[workspace]
# We exclude crates that targets the zkvm since some workspace deps are not
# compatible with the zkvm architecture.
members = [
	"core",
	"node",
	"programs",
    "zkvm-utils",
]
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
axum = "0.7.5"
alloy = { version = "0.2", features = ["signer-local"], default-features = false }
alloy-primitives = { version = "0.7", default-features = false }
alloy-sol-types = { version = "0.7", default-features = false }

borsh = { version = "1", features = ["derive", "std"], default-features = false }
bytes = "1.7"

clap = { version = "4", features = ["derive"] }

eyre = { version = "0.6", default-features = false }

k256 = { version = "0.13", default-features = false }

paste = "1"

risc0-zkvm = { version = "1", features = ["prove"], default-features = false }
risc0-build = { version = "1", default-features = false }
risc0-zkp = { version = "1.0", default-features = false }
risc0-binfmt = { version = "1", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.0.3", features = ["mdbx"], default-features = false}
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.0.3", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", features = ["std"], default-features = false }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "tracing", "full"], default-features = false }
thiserror = { version = "1", default-features = false }
