[package]
name = "clob-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
alloy-primitives = { workspace = true }
bytes = { workspace = true }

# not ideal to have this here
reth-db = { workspace = true }