[package]
name = "node"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
alloy = { version = "0.2", features = ["full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp"], default-features = false }
tokio = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }

# DB deps
bytes = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
paste = { workspace = true }
reth-db-api = { workspace = true }
reth-db = { workspace = true }

# local deps
clob-core = { path = "../core" }
programs = { path = "../programs"}

# zkvm execute deps
risc0-zkvm = { workspace = true, optional = true}

[dev-dependencies]
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0"
tempfile = "3"
mime = "0"

[features]
default = ["zkvm-execute"]
# Enable the zkvm and execute all requests in **both** the zkvm and natively, comparing outputs.
zkvm-execute = ["risc0-zkvm"]