[package]
name = "programs-sp1"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
sp1-sdk = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }
sp1-build = { workspace = true }
