[package]
name = "programs"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true, features = ["client"] }
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-rlp = { version = "0.3", features = ["derive"], default-features = false }
alloy-sol-types = { version = "0.7", default-features = false }

[build-dependencies]
risc0-build = { workspace = true }
zkvm-utils = { path = "../zkvm-utils" }

[package.metadata.risc0]
methods = ["app"]
