[package]
name = "programs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true, features = ["sol-types"], default-features = false }
alloy-primitives = { workspace = true }
sp1-sdk = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }
sp1-build = { workspace = true }
zkvm-utils = { path = "../zkvm-utils" }
