[package]
name = "zkvm-utils"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
k256 = { workspace = true }
sha2 = { workspace = true }
eyre = { workspace = true }
hex = { version = "0.4" }
risc0-build = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-zkp = { workspace = true }
ethers = { version = "2.0" }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { workspace = true }

