[package]
name = "zkvm-utils"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
k256 = { workspace = true }
risc0-build = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { workspace = true }

ivm-abi = { workspace = true }
zkvm-executor = { workspace = true }

sp1-zkvm = { workspace = true }
sp1-sdk = { workspace = true }
sp1-helper = { workspace = true }
sp1-build = { workspace = true }

