[package]
name = "zkvm-utils"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
k256 = { workspace = true }
tokio = { workspace = true }

ivm-abi = { workspace = true }
ivm-proto = { workspace = true }
ivm-zkvm = { workspace = true }
ivm-zkvm-executor = { workspace = true }
