[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "square-root"
path = "src/square_root.rs"

[workspace]

[dependencies]
risc0-zkvm = { version = "1", default-features = false, features = ['std'] }
alloy-sol-types = { version = "0.7", default-features = false }
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
