[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true, features = ["libm", "lib"], default-features = false }
alloy = { workspace = true, features = ["sol-types"], default-features = false }

[build-dependencies]
sp1-helper = { workspace = true, default-features = false }
